--- a/MyPet.html
+++ b/MyPet.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
   <header>
-    <title>MY 3 PETS</title>
+    <title></title>
+    <link href= "/Users/alextwenji/Documents/Moringa/pet-peeve/CSS/styles1.css" rel = "stylesheet" type="text/css"
   </header>
 
   <body>
     <h1>MY 3 PETS:)</h1>
-    <p>I have 3 pets, all of them cats. Each with its own distinct characteristics and individuality.</p>
-    <p>Their names are; Monty, Flucky and Wa-John
-
+    <p>I have 3 pets, all of them cats. Each with its own distinct <strong>characteristics</strong> and <strong>individuality</strong>.</p>
+    <p>Their names are; <em>Monty, Flucky and Wa-John</em>.
     <p>Facts about each cat:</p> 
     <ol>
       <li>
-        Monty:
+        <strong><em>Monty</em></strong>:
         <ul>
           <li>He's loosely named after the cartoon character Morty from Rick and Morty.</li>
           <li>He's the most playful one of the bunch.</li>
@@ -22,9 +22,10 @@
           <li>I think of our playtime as me training him on how to use his claws.</li>
         </ul>
       </li>
+      <img src = "/Users/alextwenji/Documents/Moringa/my-first-website/images/Monty.jpg">
 
       <li>
-        Flucky:
+        <strong><em>Flucky</em></strong>:
         <ul>
           <li>She's named after the Flucklin in Captain Marvel.</li>
           <li>She only likes to be pet when she wants.</li>
@@ -34,9 +35,9 @@
           <li>She's the most adventurous of the bunch.</li>
         </ul>
       </li>
-
+      <img src = "/Users/alextwenji/Documents/Moringa/my-first-website/images/Flucky.jpg">
       <li>
-        Wa-John:
+        <strong><em>Wa-John</em></strong>:
         <ul>
           <li>Got her from a friend who recently gave birth.</li>
           <li>She's only lived with us for a week.</li>
@@ -46,6 +47,7 @@
           <li>She doesn't eat cooked meat.</li>
         </ul>
       </li>
+      <img src = "/Users/alextwenji/Documents/Moringa/my-first-website/images/Wa-John.jpg">
     </ol>
   </body>
 </html>
